# CosmosEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  setup.py
Cosmos/: Application.cpp  Application.h  CMakeLists.txt  boot.cpp
Cosmos/Runtime/: Boot.cpp
CosmosCore/: Boot.cpp  CMakeLists.txt
CosmosCore/include/Core/: Application.h
CosmosCore/src/: Application.cpp
CosmosEditor/: CMakeLists.txt
CosmosEditor/include/Editor/: Editor.h
CosmosEditor/src/: Editor.cpp
Editor/: CMakeLists.txt  Editor.cpp
